--- a/.github/workflows/graphql-inspector.yml
+++ b/.github/workflows/graphql-inspector.yml
@@ -60,7 +60,7 @@ jobs:
           echo "has_changes=$([[ $BREAKING_COUNT -gt 0 ]] && echo 'true' || echo 'false')" >> $GITHUB_OUTPUT
           echo "breaking_count=$BREAKING_COUNT" >> $GITHUB_OUTPUT
 
-      - name: Check for approval in PR description
+      - name: Check for approval comment
         if: steps.schema-check.outputs.has_changes == 'true'
         id: check-approval
         uses: actions/github-script@v6
@@ -68,25 +68,6 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             const fs = require('fs');
-            
-            // Get the PR description
-            const { data: pullRequest } = await github.rest.pulls.get({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              pull_number: context.issue.number
-            });
-            
-            // Look for approval tag in PR description
-            const approvalPattern = /\[APPROVED BREAKING CHANGES\]:\s*([\s\S]*?)(?=\[|$)/;
-            const match = pullRequest.body ? pullRequest.body.match(approvalPattern) : null;
-            
-            if (!match) {
-              console.log('No approved breaking changes found in PR description');
-              return false;
-            }
-            
-            const approvedChanges = match[1].trim().split('\n').filter(line => line.trim() !== '');
-            console.log('Approved breaking changes found:', approvedChanges);
             
             // Read breaking changes from file
             let breakingChanges = [];
@@ -103,31 +84,52 @@ jobs:
               return false;
             }
             
-            console.log('Detected breaking changes:', breakingChanges);
+            // Get all PR comments
+            const { data: comments } = await github.rest.issues.listComments({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              issue_number: context.issue.number
+            });
             
-            // Check if all breaking changes are approved
-            let allApproved = true;
-            const unapprovedChanges = [];
-            
-            for (const change of breakingChanges) {
-              const isApproved = approvedChanges.some(approvedChange => 
-                change.includes(approvedChange.trim()) || 
-                approvedChange.trim().includes(change)
-              );
-              
-              if (!isApproved) {
-                allApproved = false;
-                unapprovedChanges.push(change);
+            // Look for approval comment
+            let approvalFound = false;
+            for (const comment of comments) {
+              if (comment.body.includes('[APPROVED BREAKING CHANGES]:')) {
+                const approvalPattern = /\[APPROVED BREAKING CHANGES\]:\s*([\s\S]*?)(?=\[|$)/;
+                const match = comment.body.match(approvalPattern);
+                
+                if (match) {
+                  const approvedChanges = match[1].trim().split('\n').filter(line => line.trim() !== '');
+                  console.log('Approved breaking changes found:', approvedChanges);
+                  
+                  // Check if all breaking changes are approved
+                  let allApproved = true;
+                  const unapprovedChanges = [];
+                  
+                  for (const change of breakingChanges) {
+                    const isApproved = approvedChanges.some(approvedChange => 
+                      change.includes(approvedChange.trim()) || 
+                      approvedChange.trim().includes(change)
+                    );
+                    
+                    if (!isApproved) {
+                      allApproved = false;
+                      unapprovedChanges.push(change);
+                    }
+                  }
+                  
+                  if (allApproved) {
+                    console.log('All breaking changes are approved!');
+                    return true;
+                  } else {
+                    console.log('Some breaking changes are not approved:', unapprovedChanges);
+                  }
+                }
               }
             }
             
-            if (allApproved) {
-              console.log('All breaking changes are approved!');
-              return true;
-            } else {
-              console.log('Some breaking changes are not approved:', unapprovedChanges);
-              return false;
-            }
+            console.log('No valid approval comment found');
+            return false;
 
       - name: Generate breaking changes report
         if: steps.schema-check.outputs.has_changes == 'true' && steps.check-approval.outputs.result != 'true'
@@ -162,7 +164,7 @@ jobs:
               }
               
               comment += '\n### How to approve these changes\n\n';
-              comment += 'To approve these breaking changes, add the following section to your PR description:\n\n';
+              comment += 'To approve these breaking changes, add a comment containing:\n\n';
               comment += '```\n[APPROVED BREAKING CHANGES]:\n';
               
               for (const change of breakingChanges) {
@@ -170,7 +172,7 @@ jobs:
               }
               
               comment += '```\n\n';
-              comment += 'Then update the PR to trigger this workflow again.';
+              comment += 'You can copy and paste this entire block into a comment to approve all changes.';
               
               await github.rest.issues.createComment({
                 owner: context.repo.owner,
@@ -183,15 +185,15 @@ jobs:
       - name: Fail if breaking changes are not approved
         if: steps.schema-check.outputs.has_changes == 'true' && steps.check-approval.outputs.result != 'true'
         run: |
-          echo "❌ Breaking schema changes detected and not approved in PR description."
-          echo "Please approve the breaking changes by adding the [APPROVED BREAKING CHANGES] section to your PR description."
+          echo "❌ Breaking schema changes detected and not approved in PR comments."
+          echo "Please approve the breaking changes by adding the [APPROVED BREAKING CHANGES] section in a comment."
           echo "Breaking changes detected: $(cat breaking_changes.txt)"
           exit 1
 
       - name: Pass check if breaking changes are approved
         if: steps.schema-check.outputs.has_changes == 'true' && steps.check-approval.outputs.result == 'true'
         run: |
-          echo "✅ Breaking schema changes have been approved in the PR description."
+          echo "✅ Breaking schema changes have been approved in the PR comments."
           echo "Approved changes: $(cat breaking_changes.txt)"
 
       - name: Pass check if no breaking changes
